--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_bloc: ^8.0.1
+  equatable: ^2.0.3
+  dio: ^4.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
